# 2018LWHSVisionObjectDetection

./: .gitignore  CMakeLists.txt  FIRST_FRC_BSD_License.txt  Readme.md  build.sh  computerVisionPresentationV2.odp  computerVisionPresentationV2Backup.odp
RobotServer/: AutonomousManager.java  MathHelper.java  Robot.java  SocketCommunicator.java  VisionAuto.java  VisionCommunicator.java  VisionOutput.java  WebHelper.java
network_tables/: main.cpp  output
ntcore/: CMakeLists.txt  CTestTestfile.cmake  libntcore.so.1.0.0
ntcore/gmock/: CTestTestfile.cmake
ntcore/gmock/gtest/: CTestTestfile.cmake  Makefile
ntcore/test/: Makefile  cmake_install.cmake
ntcore/test/unit/: Makefile  cmake_install.cmake
ntcore2/: CMakeCache.txt  Makefile  cmake_install.cmake  libntcore.so.1.0.0  main.cpp
ntcore2/gmock/: Makefile  cmake_install.cmake
ntcore2/gmock/gtest/: cmake_install.cmake
ntcore2/test/: CTestTestfile.cmake  client  rpc_local  rpc_speed  server
ntcore2/test/unit/: CTestTestfile.cmake  testntcore
robotVision/: .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  Vision  cameraConfiguration.txt  cameraConfiguration1.txt  cameraConfigurations.txt  cmake_install.cmake  generateChessboard.html  main.cpp  main.cpp.save  main.cpp.save.1
robotVision/Headers/: .Box.h.swp  .Shape.h.swp  .Vector3D.h.swp  ApplicationController.h  Box.h  CMakeConfigurationInformation.h.in  CameraFilter.h  CameraNormalizer.h  CameraOptionsTrackbarManager.h  Color.h  CornerDetector.h  Detector.h  Displacement.h  GenericVisionOutput.h  LightedLine.h  Line.h  ListHelper.h  ListHelperImplementation.tcc  Logging.h  MathHelper.h  NetworkCommunicator.h  NetworkVisionOutput.h  ObjectSortingContainer.h  Plane.h  PlaneDetector.h  PlaneDetectorOptions.h  Point.h  Point2D.h  Point3D.h  PowerCube.h  Serialize.h  Shape.h  ShapeComparisonOptions.h  ShapeDetector.h  ShapeList.h  ShapeLoader.h  Vector3D.h  VisionApplication.h  VisionInputParameters.h  VisionOutput.h  (+2 more)
robotVision/OldFiles/: CMakeLists.txt  CameraFilter.cpp  Plane.cpp  Plane.h  Shape.h
robotVision/Source/: .Box.cpp.swp  .CameraFilter.cpp.swp  .Shape.cpp.swp  .Vector3D.cpp.swp  ApplicationController.cpp  Box.cpp  CameraFilter.cpp  CameraNormalizer.cpp  CameraOptionsTrackbarManager.cpp  Color.cpp  CornerDetector.cpp  Detector.cpp  GenericVisionOutput.cpp  LightedLine.cpp  Line.cpp  ListHelper.cpp  Logging.cpp  MathHelper.cpp  NetworkCommunicator.cpp  NetworkVisionOutput.cpp  ObjectSortingContainer.cpp  PlaneDetector.cpp  Point2D.cpp  Point3D.cpp  PowerCube.cpp  Serialize.cpp  Shape.cpp  ShapeDetector.cpp  ShapeList.cpp  ShapeLoader.cpp  Vector3D.cpp  VisionApplication.cpp  VisitedList.cpp
